# fit-adv

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 00_setup.ipynb  10_whoop_oauth.ipynb  20_whoop_pull.ipynb  30_whoop_daily_dataset.ipynb  40_whoop_weekly_report.ipynb
src/fit_adv/: backfill.py  build_daily_core.py  build_daily_dataset.py  cli.py  config.py  io_daily_dataset.py  io_duckdb.py  io_raw_json.py  io_raw_writer.py  io_records.py  io_whoop_api.py  ops_context.py  ops_metrics.py  ops_runlog.py  ops_slack_format.py  ops_slack_send.py  persist.py  pipeline.py
src/whoop_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_ingest_records_idempotent.py  test_pipeline_smoke.py  test_whoop_backoff.py  test_whoop_fetch_collection.py  test_whoop_oauth.py
