[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whoop-lab"
version = "0.0.0"
description = "WHOOP data ingestion + reporting"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv",
  "pandas",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

