[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-adv"
version = "0.1.0"
description = "WHOOP data ingestion + reporting"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pandas",
  "pandas>=2.0",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fit-adv = "fit_adv.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=7",
]

