[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-adv"
version = "0.1.0"
description = "WHOOP data ingestion + reporting"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pandas>=2.0",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "requests-mock",
]
test = [
  "pytest>=7",
  "requests-mock",
]

[project.scripts]
fit-adv = "fit_adv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

